# rust-gene

./: .env.example  .gitignore  AGENTS.md  AGENT_IMPROVEMENT_PLAN.md  API_SETUP.md  CAPABILITY_MATRIX.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEEP_COMPARISON.md  FEATURE_COMPARISON_CLAUDE_CODE.md  FEATURE_COMPLETENESS_REPORT.md  Makefile  PLAN.md  PROGRAMMING_IMPROVEMENT_PLAN.md  QUALITY_GATES.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TUI_UPGRADE_PLAN.md  brainstorm.md  deny.toml  workflow-spec.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: ci_tool_whitelist_hook.sh
.github/workflows/: ci.yml  codeql.yml  priority-agent.yml
apps/desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: credential_store.rs  desktop_context.rs  desktop_state.rs  desktop_support.rs  desktop_types.rs  diagnostics.rs  diagnostics_export.rs  goal_commands.rs  health_commands.rs  lab_daemon_commands.rs  lib.rs  main.rs  native_smoke.rs  onboarding_commands.rs  open_commands.rs  preview_commands.rs  revert_commands.rs  run_review_commands.rs  session_commands.rs  tests.rs
apps/desktop/src-tauri/src/desktop_state/: native_smoke.rs
docs/: ACTIVE_MEMORY_PROTOTYPE.md  AGENTIC_DESIGN_PATTERNS_REVIEW.md  AGENT_EVALUATION_OBSERVABILITY_MVP_FOLLOWUP_PLAN_2026-05-25.md  AGENT_MEMORY_SYSTEM_ALIGNMENT_PLAN_2026-05-25.md  AGENT_OBSERVER_ALIGNMENT_PLAN_2026-05-24.md  AGENT_PRODUCTIZATION_REFERENCE_AUDIT_2026-05-10.md  AGENT_PROFILE_PRODUCTIZATION_PLAN_2026-06-10.md  AGENT_PROMPT_ENTRYPOINT_ALIGNMENT_PLAN_2026-06-07.md  AGENT_RUNTIME_CONTRACT_PLAN.md  AGENT_SKILLS_OPTIMIZATION_PLAN_2026-06-01.md  AGENT_TESTING_MATRIX_2026-05-08.md  AGENT_TOOLS_PERMISSIONS_ALIGNMENT_PLAN_2026-05-24.md  AGENT_WEAK_MODEL_AND_TWO_LAYER_ALIGNMENT_2026-05-25.md  AGENT_WEIGHT_SYSTEM_ALIGNMENT_PLAN_2026-05-25.md  API_CONTRACT_PROVIDER_UI_NEXT_STEPS_2026-06-07.md  API_PROVIDER_UI_PLANS_2026-06-07.md  API_PROVIDER_UI_PRODUCTIZATION_PLAN_2026-06-07.md  AUTOMATION_AUDIT_2026-06-17.md  BEHAVIOR_ASSERTION_NO_EFFECTIVE_DIFF_REPAIR_PLAN_2026-05-28.md  CACHE_COMPRESSION_AUDIT_2026-06-17.md  CAPABILITY_LADDER.md  CLAUDE_AGENT_LOOP_LESSONS_PLAN_2026-05-25.md  CLAUDE_CODE_ALGORITHM_GAP_PLAN_2026-05-23.md  CLAUDE_CODE_ALIGNMENT_PLAN.md  CLAUDE_CODE_CONTEXT_MANAGEMENT_PLAN_2026-05-23.md  CLAUDE_CODE_GAP_MATRIX_2026-05-03.md  CLAUDE_CODE_PARITY_IMPLEMENTATION_PLAN_2026-05-20.md  CLAUDE_CODE_PROGRAMMING_PARITY_RELEASE_PLAN_2026-05-22.md  CLAUDE_CODE_TOOL_FILE_RELIABILITY_AUDIT_PLAN_2026-05-23.md  CLAUDE_GAP_SCORECARD.md  CLI_COMPLETION_PLAN.md  CLOSEOUT_HANG_ANALYSIS.md  CODEBASE_REFACTORING_PLANS.md  CODEBASE_REFACTORING_PLAN_2026-06-03.md  CODEX_GOAL_MODE_ALIGNMENT_PLAN_2026-06-11.md  CODE_DOCUMENTATION_PLAN_2026-06-22.md  CODING_AGENT_REAL_TASK_REGRESSION_PLAN.md  CODING_AGENT_WORKFLOW_DISCUSSION.md  CODING_FLOW_POLISH_OBSERVABILITY_PLAN_2026-05-28.md  CODING_WORKFLOW_TEST_OPTIMIZATION_PLAN_2026-05-03.md  (+120 more)
docs/api/: session_schema.md
docs/archive/: AGENTIC_DESIGN_PATTERNS_REVIEW.md  AGENTS_PROJECT_GUIDE_PRE_RUNTIME_DIET_2026-05-08.md  AGENT_LEARNING_NOTES_PROJECT_ALIGNMENT_2026-05-24.md  AGENT_MINIMUM_VIABLE_ARCHITECTURE_ALIGNMENT_PLAN_2026-05-25.md  AGENT_MINIMUM_VIABLE_ARCHITECTURE_FOLLOWUP_PLAN_2026-05-25.md  AGENT_PROFILE_PRODUCTIZATION_PLAN_2026-06-10.md  AGENT_PROMPT_ENTRYPOINT_ALIGNMENT_PLAN_2026-06-07.md  AGENT_SKILLS_OPTIMIZATION_PLAN_2026-06-01.md  AGENT_STOP_FAILURE_RECOVERY_ALIGNMENT_PLAN_2026-05-24.md  AGENT_TOOLS_PERMISSIONS_ALIGNMENT_PLAN_2026-05-24.md  API_PROVIDER_UI_PLANS_2026-06-07.md  ARCHIVE_INDEX.md  AUTOMATION_AUDIT_2026-06-17.md  CHINA_DESKTOP_CODING_AGENT_PROJECT_PROPOSAL_2026-05-21.md  CLAUDE_CODE_ALIGNMENT_PLAN.md  CLAUDE_CODE_ANALYSIS.md  CLAUDE_CODE_CONTEXT_MANAGEMENT_PLAN_2026-05-23.md  CLAUDE_CODE_GAP_MATRIX_2026-05-03.md  CLAUDE_CODE_PARITY_IMPLEMENTATION_PLAN_2026-05-20.md  CLAUDE_CODE_PROGRAMMING_PARITY_RELEASE_PLAN_2026-05-22.md  CLAUDE_GAP_SCORECARD.md  CLOSEOUT_HANG_ANALYSIS.md  CODEBASE_REFACTORING_PLANS.md  CODE_REVIEW.md  CODE_REVIEW_PROGRAMMING.md  CODE_REVIEW_SECURITY_2026-05-30.md  CODE_REVIEW_TODAY.md  (+57 more)
evalsets/: README.md  coding_replay_matrix.yaml  feature_reality.yaml  programming_soak.yaml  smoke.yaml  test-explore-src.txt  test-list-files.txt  test-read-cargo.txt  test-simple-edit.txt  test-understand-loop.txt  tool_file_reliability_gauntlet.yaml
fixtures/: SOAK_SUITE.md  TASK_MATRIX.md
priority-cli/: Cargo.toml
priority-cli/src/: main.rs
priority-core/: Cargo.toml
priority-core/src/: errors.rs  lib.rs
priority-core/src/weight_engine/: calculator.rs  mod.rs  types.rs
resources/: providers.toml
scripts/: README.md  active-memory-baseline.sh  agent-runtime-dogfood.sh  api-full-agent-soak.sh  audit-api-smoke.sh  audit_rust_docs.py  benchmark.sh  check_desktop_release_security.sh  check_source_file_sizes.sh  classify-tasks.sh  coding-workflow-gates.sh  daily-baseline.sh  desktop-macos-release.sh  desktop-native-smoke.sh  desktop-release-dogfood.sh  desktop-smoke.sh  doc_health_check.sh  eval-run.sh  external-baseline-artifact.py  file-size-report.sh  generate-desktop-icon.py  generate-gate-replay-v2.sh  health-check.sh  install.sh  lab-live-validation.sh  lint-check.sh  live-eval-ab-compare.sh  live-eval-aggregate-summary.sh  live-eval-summary-smoke.sh  live_eval_llm_judge.py  live_eval_quality_status.py  live_eval_report_parser.py  live_eval_run_bundle.py  macos-release-preflight.sh  package-macos-app.sh  package-release.sh  product-daily-gate.sh  product_daily_summary.py  profile-test-lanes.sh  programming-soak-suite.sh  (+30 more)
src/: bootstrap.rs  changelog.rs  lib.rs  main.rs  quality_gates.rs  shell.rs  slo.rs  text_utils.rs  version.rs  workspace.rs
tests/: TUI_TEST_PLAN.md  feature_read_before_edit.rs  feature_self_correction.rs  feature_subagent_progress.rs  memory_roundtrip.rs  permission_flow.rs  session_persistence.rs  streaming_query.rs
(+3490 files in other folders)
