[package]
name = "priority-agent"
version = "0.1.0"
edition = "2021"
authors = ["George Xu <your.email@example.com>"]
description = "加权优先级桌面 Agent - 让 AI 始终专注于最重要的事项"
license = "MIT"
repository = "https://github.com/yourusername/priority-agent"
keywords = ["cli", "productivity", "task-management", "ai", "priority"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "priority-agent"
path = "src/main.rs"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 异步运行时（未来扩展）
# tokio = { version = "1.0", features = ["full"], optional = true }

# 日志
log = "0.4"
env_logger = "0.11"

# 系统目录
dirs = "5.0"

# 配置文件
# config = "0.14"

# 命令行增强（未来版本）
# clap = { version = "4.0", features = ["derive"] }
# colored = "2.0"
# dialoguer = "0.11"
# indicatif = "0.17"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# async = ["tokio"]
# interactive = ["clap", "colored", "dialoguer", "indicatif"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
