[workspace]
resolver = "2"
members = [
    "priority-core",
]

[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP 服务器 (API 层)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.24"

# OpenAI 兼容 API 客户端（用于 Kimi）
async-openai = "0.28"

# Secrets 管理
secrecy = "0.10"

# 环境变量
dotenvy = "0.15"

# 命令行解析
clap = { version = "4.5", features = ["derive"] }

# 终端 UI
ratatui = "0.29"
crossterm = "0.28"

# 颜色输出
colored = "2.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 系统目录
dirs = "5.0"

# 配置管理
config = "0.14"

# 事件系统（观察者模式）
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"

# 用于工具系统
schemars = "0.8"
async-trait = "0.1"
glob = "0.3"
regex = "1.11"
ignore = "0.4"

# SQLite 持久化
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# 其他实用工具
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
pulldown-cmark = "0.12"
libc = "0.2"
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
tempfile = "3.0"
tower = "0.5"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# TUI 升级依赖
unicode-width = "0.2"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
arboard = "3.4"

[package]
name = "priority-agent"
version = "0.1.0"
edition = "2021"
authors = ["George Xu <your.email@example.com>"]
description = "Weighted priority desktop Agent"
license = "MIT"
repository = "https://github.com/yourusername/priority-agent"
keywords = ["cli", "productivity", "task-management", "ai", "priority"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "priority-agent"
path = "src/main.rs"

[features]
default = []
experimental-api-server = []
experimental-priority = []
experimental-task-analyzer = []
experimental-platform = []
voice = []

[dependencies]
# Internal crates
priority-core = { path = "priority-core" }

# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
async-openai = { workspace = true }
secrecy = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
pulldown-cmark = { workspace = true }
libc = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
md5 = "0.7"
diffy = "0.4"
unicode-width = { workspace = true }
syntect = { workspace = true }
arboard = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
