[package]
name = "priority-cli"
version = "0.1.0"
edition = "2021"
description = "CLI/TUI frontend for Priority Agent"

[dependencies]
priority-core = { path = "../priority-core" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
async-openai = { workspace = true }
secrecy = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
pulldown-cmark = { workspace = true }
libc = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }

[features]
default = []
experimental-api-server = []
experimental-priority = []
experimental-task-analyzer = []
experimental-platform = []
legacy-cli = []
voice = []