[package]
name = "priority-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Priority Agent - Engine, Tools, Agent, Memory"

# Dependencies will be added as modules are migrated
[features]
default = []
experimental-api-server = []
experimental-priority = []
experimental-task-analyzer = []
experimental-platform = []
legacy-cli = []
voice = []