[package]
name = "priority-core"
version = "0.1.0"
edition = "2021"
description = "Experimental priority weighting models for Priority Agent"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
experimental-api-server = []
experimental-priority = []
experimental-task-analyzer = []
experimental-platform = []
legacy-cli = []
voice = []
